Identity constraints on xs:anySimpleType instances are enforced by comparing their lexical values (XERCESC-1393)

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@637054 13f79535-47bb-0310-9956-ffa450edef68